styles/Stats.module.scss
.statsContainer {
	display: flex;
	gap: 50px;

	@media (max-width: 600px) {
		gap: 20px;
		flex-direction: column;
		padding-right: 10px;
		border-right: 1px solid var(--typed-char);
	}
}

.stat {
	@media (max-width: 600px) {
		min-width: 120px;
	}

	.value {
		display: flex;
		gap: 0.2em;
		align-items: center;
		font-size: 40px;
		color: var(--primary);

		@media (max-width: 600px) {
			font-size: 34px;
		}

		.unit {
			font-size: 0.5em;
		}
	}

	.text {
		font-size: 14px;
		letter-spacing: 0.1em;
		color: var(--secondary);

		@media (max-width: 600px) {
			font-size: 10px;
		}
	}

	@media (min-width: 600px) {
		&:nth-child(2) {
			padding-right: 30px;
		}
	}
}

